# governance-analysis

./: .gitignore  CONFIGURATION_GUIDE.md  PORT_CONFIGURATION.md  SERVER_TROUBLESHOOTING.md  check-server-config.bat  check-server-config.sh  start-all-services.bat  start-all-services.sh  stop-all-services.bat  stop-all-services.sh
Agentic Backend/: .env.example  main.py  pyproject.toml  sessions.db
Agentic Backend/agentic_application/: __init__.py  config.py  entrypoint.py
Frontend/: API_CONFIGURATION.md  angular.json  package-lock.json  package.json
Frontend/src/: index.html  styles.scss
Frontend/src/app/: app.component.ts
MCP Server/: .env  .env.example  config.py  main.py  pyproject.toml  test.py  websocket_manager.py
MCP Server/tools/: __init__.py  create_committee_clarification.py  create_cost_analysis.py  create_cost_clarification.py  create_environment_clarification.py  create_environment_details.py  create_governance_request.py  create_report.py  create_risk_analysis.py  get_committee_clarifications.py  get_cost_clarifications.py  get_cost_details.py  get_environment_clarifications.py  get_environment_details.py  get_governance_report.py  get_risk_details.py  get_user_chat_history.py  get_user_details_history.py  navigate_to_section.py  update_committee_clarification.py  update_committee_status.py  update_cost_clarification.py  update_environment_clarification.py
MCP Server/utilities/: api_helpers.py
Project Backend/: .env.example  .gitignore  GOVERNANCE_API_README.md  package-lock.json  package.json
Project Backend/src/: app.module.ts  main.ts
(+97 files in other folders)
