[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.2",
    "mcp[cli]>=1.21.0",
    "nest-asyncio>=1.6.0",
    "uvicorn>=0.38.0",
    "websocket-client>=1.9.0",
    "websockets>=15.0.1",
]
