[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "eventlet>=0.40.4",
    "fastapi>=0.121.2",
    "flask>=3.1.2",
    "flask-socketio>=5.5.1",
    "mcp[cli]>=1.21.0",
    "nest-asyncio>=1.6.0",
    "python-socketio>=5.15.0",
    "uvicorn>=0.38.0",
    "websocket-client>=1.9.0",
    "websockets>=15.0.1",
]
